--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.error.include_message = never
 server.error.include-stacktrace = never
+server.port=$PORT
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 app.message=Hola mundo desde prod
