--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@ server.error.include-stacktrace = never
 server.port=$PORT
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 app.message=Hola mundo desde prod
+## H2 Console Dashboard
+spring.h2.console.enabled=true
+## H2 DataSource
+spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+## JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
