--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.error.include_message = never
 server.error.include-stacktrace = never
-server.port=$PORT
+server.port=${PORT:8080}
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 app.message=Hola mundo desde prod
 ## H2 Console Dashboard
