--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-server.error.include_message = never
-server.error.include-stacktrace = never
 server.port=${PORT:8080}
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+#spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 app.message=Hola mundo desde prod
 ## H2 Console Dashboard
 spring.h2.console.enabled=true
